--- a/Owls/Areas/Admin/Views/Products/Create.cshtml
+++ b/Owls/Areas/Admin/Views/Products/Create.cshtml
@@ -114,7 +114,7 @@
                 </div>
             }
         </div>
-    <button class="btn bg-gradient-dark" type="button" onclick="addVariant()">Add Variant</button>
+    <button class="btn bg-gradient-dark" type="button" onclick="addVariant()">Thêm thuộc tính</button>
     </div>
 
 
