--- a/Owls/Pages/_ViewImports.cshtml
+++ b/Owls/Pages/_ViewImports.cshtml
@@ -1,9 +1,10 @@
 ﻿@using Owls
 @using Owls.Models
+@using Owls.Pages
+
 @using Owls.Helper
 @using Owls.DTOs
-@using Owls.DTOs.Write;
 @using Microsoft.AspNetCore.Identity
+@using Owls.Views.Shared
 @addTagHelper *, Owls
-
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
