--- a/Owls/Areas/Admin/Views/Home/Index.cshtml
+++ b/Owls/Areas/Admin/Views/Home/Index.cshtml
@@ -1,1 +1,13 @@
-﻿
+﻿<div class="row">
+    <vc:key-metrics/>
+   
+</div>
+<div class="row">
+    <vc:chart-by-time />
+</div>
+<div class="row">
+    <vc:best-seller-product/>
+</div>
+<div class="row mt-4" id="order-view-component">
+    <vc:new-orders/>
+</div>
