--- a/Owls/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Owls/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="apple-touch-icon" sizes="76x76" href="~/image/owls-favicon-color.png">
     <link rel="icon" type="image/png" href="~/image/owls-favicon-color.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
+
     <title>
         Owls Admin  
     </title>
