--- a/Owls/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Owls/Areas/Admin/Views/_ViewImports.cshtml
@@ -4,6 +4,8 @@
 @using Owls.DTOs
 @using Owls.DTOs.Write;
 @using Microsoft.AspNetCore.Identity
+@using Owls.Views.Shared.Components
+@using Owls.Areas.Admin.Views.Shared.Components
 @addTagHelper *, Owls
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
