--- a/Owls/Areas/Admin/Views/Orders/Index.cshtml
+++ b/Owls/Areas/Admin/Views/Orders/Index.cshtml
@@ -8,33 +8,37 @@
         <div class="card mb-4">
             <div class="card-header pb-0">
                 <h5 class="w-20">Đơn hàng</h5>
-                <form asp-action="Index" asp-area="Admin" asp-controller="Orders">
-                    <div class="row">
-                        <div class="col-1">
-                            <label for="StartDate">Từ </label>
+                <div class="row">
+                    <form class="col-12 col-lg-7" asp-action="Index" asp-area="Admin" asp-controller="Orders">
+                        <div class="row">
+                            <div class="col-1">
+                                <label for="StartDate">Từ </label>
+                            </div>
+                            <div class="col-4 ">
+                                <input type="date" class="form-control col-11" id="from" name="from" value="@ViewBag.From?.ToString("yyyy-MM-dd")">
+                            </div>
+                            <div class="col-1">
+                                <label for="EndDate">Đến</label>
+                            </div>
+                            <div class="col-4">
+                                <input type="date" class="form-control" id="to" name="to" value="@ViewBag.To?.ToString("yyyy-MM-dd")">
+                            </div>
+                            <div class="col-2">
+                                <button type="submit" class="btn btn-primary">Lọc</button>
+                            </div>
                         </div>
-                        <div class="col-4 ">
-                            <input type="date" class="form-control col-11" id="from" name="from" value="@ViewBag.From?.ToString("yyyy-MM-dd")">
-                        </div>
-                        <div class="col-1">
-                            <label for="EndDate">Đến</label>
-                        </div>
-                        <div class="col-4">
-                            <input type="date" class="form-control" id="to" name="to" value="@ViewBag.To?.ToString("yyyy-MM-dd")">
-                        </div>
-                        <div class="col-2">
-                            <button type="submit" class="btn btn-primary">Lọc</button>
-                        </div>
-                    </div>
 
-                </form>
-                <div>
-                    <form asp-action="Search" asp-area="Admin" asp-controller="Orders" method="get">
-                        <input type="text" id="searchInput" name="orderId" value="@ViewBag.SearchString" placeholder="Mã đơn hàng...">
-                        <button class="btn btn-outline-primary btn-sm mb-0 " id="filterButton" type="submit">Tìm</button>         
                     </form>
-                  
+                    <div class="col-12 col-lg-5">
+                        <form asp-action="Search" asp-area="Admin" asp-controller="Orders" method="get">
+                            <input type="text" id="searchInput" name="orderId" value="@ViewBag.SearchString" placeholder="Mã đơn hàng...">
+                            <button class="btn btn-outline-primary btn-sm mb-0 " id="filterButton" type="submit">Tìm</button>
+                        </form>
+
+                    </div>
                 </div>
+             
+               
             </div>
             <div class="card-body px-0 pt-0 pb-2">
                 <div class="table-responsive p-0">
