--- a/Owls/Views/Shared/Components/Profile/Default.cshtml
+++ b/Owls/Views/Shared/Components/Profile/Default.cshtml
@@ -77,7 +77,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex justify-content-center ">
+                <div class="d-flex justify-content-center position-relative" >
+                        <a class="btn btn-link text-dark px-3 mb-0 position-absolute" style="left:0;" href="/reset">
+                            <i class="fas fa-pencil-alt text-dark me-2" aria-hidden="true"></i>
+                            Đổi mật khẩu
+                        </a>
                     <button type="submit" class="btn btn-outline-primary btn-sm mb-0">Lưu</button>
                 </div>
             </form>
