--- a/Owls/Pages/SendEmail.cshtml
+++ b/Owls/Pages/SendEmail.cshtml
@@ -1,9 +1,9 @@
 ﻿@page "/reset"
 @model SendEmailModel
 <link href="~/css/reset.css" rel="stylesheet" />
-<div class="row justify-content-center align-content-center " id="resetPass">
+<div class="row justify-content-center align-content-center p-8 mt-8" id="resetPass">
     <div class="col-12 col-lg-6">
-        <div class="card card-plain mt-8">
+        <div class="card card-plain">
             <div class="card-body">
                 <form role="form" method="post">
                     <label>Email</label>
