--- a/Owls/Pages/_ViewImports.cshtml
+++ b/Owls/Pages/_ViewImports.cshtml
@@ -1,4 +1,7 @@
-﻿@using Owls
+﻿@namespace Owls.Pages
+@using Microsoft.AspNetCore.Mvc.RazorPages
+
+@using Owls
 @using Owls.Models
 @using Owls.Pages
 
