--- a/Owls/Views/Shared/_Footer.cshtml
+++ b/Owls/Views/Shared/_Footer.cshtml
@@ -5,9 +5,12 @@
                 <div class="footer__widget">
                     <h6>Hệ thống cửa hàng</h6>
                     <ul>
-                        <li><a href="#">Quận 1 - 160 Nguyễn Cư Trinh, Phường Nguyễn Cư Trinh.</a></li>
-                        <li><a href="#">Quận 10 - 561 Sư Vạn Hạnh, Phường 13.</a></li>
-                        <li><a href="#">Quận Gò Vấp - 326 Quang Trung, Phường 10.</a></li>
+                        <li><a href="#"> 828 Sư Vạn Hạnh (Quận 10)</a></li>
+                        <li><a href="#"> M4-M7-M9 Thất Sơn (Quận 10)</a></li>
+                        <li><a href="#">298-304 Cao Thắng (Quận 10)</a></li>
+                        <li><a href="#">32 Trường Sơn (Quận Tân Bình)</a></li>
+                        <li><a href="#">806 QL22, ấp Mỹ Hoà 3(Hóc Môn)</a></li>
+
                     </ul>
                 </div>
             </div>
