--- a/Owls/Areas/Admin/Views/Products/Create.cshtml
+++ b/Owls/Areas/Admin/Views/Products/Create.cshtml
@@ -6,10 +6,11 @@
 }
 <link asp-append-version="true" href="~/css/prod.css" rel="stylesheet" />
 
-<div class="row justify-content-between">
-    <h2 class="col-10 text-center w-30"> Thêm sản phẩm mới</h2>
-    <button type="submit" class=" col-1 btn btn-primary" form="form-create">Thêm</button>
 
+<div class="row justify-content-between">
+     <div class="col-1"></div>
+        <h4 class="col-9 text-center "> Thêm sản phẩm mới</h4>
+        <button type="submit" class=" col-1 btn btn-primary" form="form-create">Thêm</button>
 </div>
 
 <form id="form-create"  method="post" asp-area="Admin" asp-controller="Products" asp-action="Create" enctype="multipart/form-data">
