--- a/Owls/Views/Shared/Navbar.cshtml
+++ b/Owls/Views/Shared/Navbar.cshtml
@@ -1,9 +1,9 @@
 ﻿<header class="header">
     <div class="container-fluid">
         <div class="row">
-            <a class="col-xl-3 col-lg-2 d-flex justify-content-center align-items-center" href="@Url.Action("Index", "Home")">
-                <div class="header__logo">
-                    <img src="/image/lg.png" alt="">
+            <a class="col-xl-3 col-lg-2 d-flex justify-content-end align-items-center" href="@Url.Action("Index", "Home")">
+                <div class="header__logo ">
+                        <img src="/image/lg.png" alt="" height="50">
                 </div>
             </a>
 
